# coug_fgo_dev

./: .gitignore  README.md  TODO.md  compose.sh  holoocean_launch.sh
coug_ws/src/coug_bringup/: package.xml  setup.py
coug_ws/src/coug_bringup/launch/: base_hitl.launch.py  bluerov2_hitl.launch.py  dev.launch.py
coug_ws/src/coug_description/: LICENSE  package.xml  setup.py
coug_ws/src/coug_description/launch/: coug_description.launch.py
coug_ws/src/coug_description/urdf/: couguv_holoocean.urdf.xacro
coug_ws/src/coug_description/urdf/bluerov2_heavy/: bluerov2_heavy.urdf.xacro
coug_ws/src/coug_description/urdf/bluerov2_holoocean/: bluerov2_holoocean.urdf.xacro
coug_ws/src/coug_fgo/: CMakeLists.txt  package.xml
coug_ws/src/coug_fgo/config/: fgo_params.yaml
coug_ws/src/coug_fgo/include/coug_fgo/: factor_graph_node.hpp  navsat_preprocessor_node.hpp
coug_ws/src/coug_fgo/include/coug_fgo/factors/: depth_factor_arm.hpp  dvl_factor.hpp  dvl_factor_arm.hpp  gps_factor_arm.hpp  heading_factor_arm.hpp
coug_ws/src/coug_fgo/include/coug_fgo/utils/: conversion_utils.hpp
coug_ws/src/coug_fgo/launch/: coug_fgo.launch.py
coug_ws/src/coug_fgo/src/: factor_graph_node.cpp  navsat_preprocessor_node.cpp
coug_ws/src/coug_fgo/src/utils/: conversion_utils.cpp
coug_ws/src/coug_gui/: CMakeLists.txt  mapviz_plugins.xml  package.xml
coug_ws/src/coug_gui/config/: mapviz_params.mvc  rviz_params.rviz
coug_ws/src/coug_gui/include/coug_gui/: coug_waypoints_plugin.h
coug_ws/src/coug_gui/launch/: mapviz.launch.py  rviz.launch.py
coug_ws/src/coug_gui/src/: coug_waypoints_plugin.cpp
coug_ws/src/coug_gui/ui/: coug_waypoints_config.ui
coug_ws/src/coug_localization/: package.xml  setup.py
coug_ws/src/coug_localization/config/: localization_params.yaml
coug_ws/src/coug_localization/launch/: coug_localization.launch.py
coug_ws/src/holoocean_bridge/: package.xml  setup.cfg  setup.py
coug_ws/src/holoocean_bridge/config/: bridge_params.yaml
coug_ws/src/holoocean_bridge/config/holoocean/: bluerov2_holoocean_params.yaml  bluerov2_openwater.json  coug_holoocean_params.yaml  coug_openwater.json
coug_ws/src/holoocean_bridge/holoocean_bridge/: cmd_vel_converter_node.py  depth_converter_node.py  dvl_converter_node.py  fin_state_publisher_node.py  gps_converter_node.py  heading_converter_node.py  hsd_commander_node.py  imu_converter_node.py  truth_converter_node.py
coug_ws/src/holoocean_bridge/launch/: holoocean_bridge.launch.py
docker/: .tmux.conf  Dockerfile  docker-compose.yaml  entrypoint.sh
docker/holoocean/: Dockerfile  docker-compose.yaml  entrypoint.sh
docker/startup/: entrypoint.sh  introduction.txt
scripts/: base_hitl_launch.sh  bluerov2_hitl_launch.sh  dev_launch.sh  key_teleop.sh
scripts/plots/: plot.py  record.sh
